# Dev-Helper-MCP-Agent

./: .gitignore  GIT_CHEATSHEET.md  PULL_REQUEST_TEMPLATE.md  README.md  create_pr.md
.devcontainer/: Dockerfile  devcontainer.json
documentation/: PRD.md  PULL_REQUEST_TEMPLATE.md  note
src/advanced-agent/: .gitignore  PHASE_1_1_SUMMARY.md  PRD.md  README.md  demo_phase1_1.py  main.py  pyproject.toml  test_phase1_1.py
src/advanced-agent/src/: firecrawl.py  models.py  prompts.py  workflow.py
src/advanced-agent/src/config/: __init__.py  settings.py
src/advanced-agent/src/models/: __init__.py
src/advanced-agent/src/prompts/: __init__.py
src/advanced-agent/src/search/: __init__.py  query_builder.py
src/advanced-agent/src/search/strategies/: __init__.py  hybrid_search.py
src/advanced-agent/src/services/: __init__.py  firecrawl.py  serper_search.py
src/advanced-agent/src/utils/: __init__.py  error_handler.py  logger.py
src/advanced-agent/src/workflows/: __init__.py  developer_tools.py
src/simple-agent/: .gitignore  main.py  pyproject.toml
